--- a/sites/QuixxProjectsSiteTest/design.css
+++ b/sites/QuixxProjectsSiteTest/design.css
@@ -122,7 +122,8 @@ header nav .top-bar,a:nth-child(4):hover~.animate{
 #home-section{
     position: relative;
     top: 99px;
-    height: 110vh;
+    width: 100%;
+    height: 100vh;
     background-image: url("banner02.png");
     background-size: cover;
     background-position-y: 20px;
@@ -156,6 +157,7 @@ header nav .top-bar,a:nth-child(4):hover~.animate{
     left: 20px;
     right: 20px;
     top: 150px;
+    margin-bottom: 100px;
 }
 
 .services-card{
@@ -163,7 +165,13 @@ header nav .top-bar,a:nth-child(4):hover~.animate{
     border-radius: 20px;
     border-color: #FDB717;
     width: 100%;
-    height: 200%;
+}
+
+.services-card:first-child{
+    height: 400px;
+}
+.services-card:last-child{
+    height: 400px;
 }
 
 
@@ -175,9 +183,7 @@ header nav .top-bar,a:nth-child(4):hover~.animate{
 }
 
 
-
-
-@media (max-width:768px) {
+@media (max-width:750px) {
     nav a{
         visibility: hidden;
     }
