--- a/sites/QuixxProjectsSiteTest/design.css
+++ b/sites/QuixxProjectsSiteTest/design.css
@@ -154,7 +154,7 @@ header nav .top-bar,a:nth-child(4):hover~.animate{
     background-repeat: no-repeat;
     top: 10vh;
     height: 100%;
-    background-image: url("banner01.png");
+    background-image: url("assets/banner01.png");
     background-size: cover;
 }
 
@@ -482,6 +482,7 @@ li{
         position: fixed;
         width: 75%;
         height: 75vh;
+        overflow-y: scroll;
         background: #ffffff;
         right: -100%;
         top: 10vh;
