--- a/sites/QuixxProjectsSiteTest/design.css
+++ b/sites/QuixxProjectsSiteTest/design.css
@@ -158,7 +158,7 @@ header nav .top-bar,a:nth-child(4):hover~.animate{
     background-repeat: no-repeat;
     top: 10vh;
     height: 100%;
-    background-image: url("assets/banner01.png");
+    background-image: url("assets/banner01.svg");
     background-size: cover;
 }
 
