--- a/sites/QuixxProjectsSiteTest/design.css
+++ b/sites/QuixxProjectsSiteTest/design.css
@@ -126,12 +126,12 @@ header nav .top-bar,a:nth-child(4):hover~.animate{
 
 .show-menu-btn{
     transition: 0.4s;
-    font-size: 7vh;
+    font-size: 5vh;
     cursor: pointer;
     display: none;
     position: fixed;
-    right: 5vh;
-    top: 2vh;
+    right: 2.5vh;
+    top: 2.5vh;
 }
 
 .show-menu-btn:hover,
@@ -192,7 +192,8 @@ header nav .top-bar,a:nth-child(4):hover~.animate{
 
 .services-cards{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(350px,1fr)); */
+    grid-template-columns: 1fr 1fr;
     justify-items: center;
     grid-gap: 50px;
     text-align: center;
@@ -227,8 +228,8 @@ header nav .top-bar,a:nth-child(4):hover~.animate{
  
 .services-card:nth-child(n){
     /* height: 40vh; */
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 5vh;
+    padding-bottom: 10vh;
 }
 
 
@@ -277,7 +278,7 @@ li{
 
 .project-cards{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 2vh;
     top: 5vh;
     bottom: 10vh;
@@ -293,6 +294,8 @@ li{
     border-radius: 10px;
     background: #ffffff;
     padding: 20px;
+    padding-top: 5vh;
+    padding-bottom: 10vh;
     box-shadow: -5px 5px 10px rgba(50, 50, 50, 0.2);
 }
 
@@ -446,7 +449,8 @@ footer {
     min-height: 5vh;
     font-size: 2vh;
     width: 100%;
-    background-color:white;
+    background-color: #ffffff;
+    box-shadow: 5px 0 5px 1px #101010;
     color: black;
     
 }
@@ -462,7 +466,7 @@ footer {
     flex-direction: row;
     justify-items: right;
     justify-content: flex-end;
-    bottom: 0px;
+    align-items: center;
     margin-bottom: 0;
 }
 
@@ -520,12 +524,13 @@ footer {
         width: 75%;
         height: 75vh;
         overflow-y: scroll;
-        background: #ffffff;
+        background: #eeeeee;
         right: -100%;
         top: 10vh;
         border-radius:5px;
-        border: 5px solid;
-        border-color: #FDB717;
+        border: 1px solid;
+        border-color:#222D5B;
+        border-right: #ffffff;
         text-align: center;
         padding-top: 50px 0;
         line-height: normal;
@@ -630,6 +635,7 @@ footer {
 
     .footer-text{
         text-align: center;
+        margin-left: unset;
     }
 
     .social-btns{
